# ml_model_proj

./: README.md  pyproject.toml
init/: Dockerfile  pyproject.toml  requirements.txt
init/data/processed/: heart_attack_prediction_dataset1_processed.csv  heart_disease_dataset_new.csv
init/data/raw/: heart_attack_prediction_dataset.csv  heart_attack_prediction_dataset1.csv
init/notebooks/: analisis_exploratorio.ipynb  pre_procesamiento.ipynb  pre_procesamiento_prueba_label_encoder.ipynb  pre_procesamiento_prueba_one_hot_encoder copy.ipynb  primer_analisis.ipynb
init/src/utils/: auto_importer.py
